# CommandCast

./: .gitignore  README.md  run.sh
Agent-S/: .gitignore  pyproject.toml  run_claude.sh  run_demo_best.sh  run_demo_fast.sh  run_grok.sh  run_groq.sh  run_openai.sh  test.py
Agent-S/src/s3/: action_analysis_agent.py  app.py  cli_app.py
Agent-S/src/s3/agents/: agent_s.py  code_agent.py  grounding.py  worker.py
Agent-S/src/s3/bbon/: behavior_narrator.py  comparative_judge.py
Agent-S/src/s3/core/: engine.py  mllm.py  module.py
Agent-S/src/s3/memory/: procedural_memory.py
Agent-S/src/s3/utils/: common_utils.py  formatters.py
Agent-S/tests/: listen_current_action.py  test_action_analysis_agent.py  test_asi_one.py  test_client.py
backend/: AUDIO_DEBUG_README.md  AUDIO_STREAMING_ARCHITECTURE.md  DEBUG_AUDIO_FLOW.md  TROUBLESHOOTING_AUDIO_LEVELS.md  VAD_ARCHITECTURE.md  audio.py  audio_level_monitor.html  call.py  imessage_bridge.py  main.py  out_of_memory_error.py  pyproject.toml  run_output_audio.py  test_agent_s.py  test_audio_levels.py  test_audio_output_states.py  test_call.py  test_vad_integration.py
frontend/: .gitignore  API-INTEGRATION.md  README.md  index.html  package-lock.json  package.json  test-action-api.js  test-action-api.py
frontend/electron/: ApiServerHelper.ts  ProcessingHelper.ts  WindowHelper.ts  ipcHandlers.ts  main.ts  preload.ts
frontend/src/: App.tsx  index.css
frontend/src/_pages/: Debug.tsx  Queue.tsx  Solutions.tsx
frontend/src/components/Queue/: QueueCommands.tsx
frontend/src/components/Solutions/: SolutionCommands.tsx
frontend/src/types/: electron.d.ts
